correct email typo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         388 Verdi St · Davenport, FL 33896 · (706) 521-1108 ·
-                        <a href="mailto:name@email.com">dustinray.dev@gmail.com</a>
+                        <a href="mailto:dustinray.dev@gmail.com">dustinray.dev@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am a constantly curious problem-solver who loves learning new skills and making things.</p>
                     <div class="social-icons">
