update work experience dates

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="subheading mb-3">Walt Disney World</div>
                             <p>Utilize traditional and newer pattern-making techniques to overcome the challenges of bringing characters to life in our parks. Collaboration and adaptability are key as requirements and deadlines are constantly in flux.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2017 - Nov 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2017 - Present</span></div>
                     </div>
                 </div>
             </section>
