update bellevue dates

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Bellevue University</h3>
-                            <div class="subheading mb-3">Pursuing Bachelor of Science</div>
-                            <div>Computer Science - Software Development Track</div>
-                            <p>Current Overall GPA: 4.0</p>
+                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <div>Computer Science - Software Development</div>
+                            <p>Current Overall GPA: 3.83</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Aug 2020 - Dec 2021</span></div>
                     </div>
@@ -98,7 +98,7 @@
                             <h3 class="mb-0">Western Kentucky University</h3>
                             <div class="subheading mb-3">Bachelor of Arts</div>
                             <div>Musical Theatre</div>
-                            <p>GPA: 4.0</p>
+                            <p>GPA: 3.2</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jan 2007 - May 2010</span></div>
                     </div>
