remove 'current overall' from bellevue gpa

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <h3 class="mb-0">Bellevue University</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Computer Science - Software Development</div>
-                            <p>Current Overall GPA: 3.83</p>
+                            <p>GPA: 3.83</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Aug 2020 - Oct 2021</span></div>
                     </div>
